# vivesca

./: --remote-debugging-port=9222  -m  .agnix.toml  .claude  .coverage  .dockerignore  .gitignore  .last-sync  .pre-commit-config.yaml  .pyright.json  .pyright_check.json  .pyright_check.txt  .pyright_fresh.json  .pyright_metabolon.json  .pyright_metabolon_test.json  .pyright_out.txt  .pyright_raw.json  .pyright_result.json  .pyright_result.txt  .pyright_root.json  .pyright_tmp.json  .pyright_tmp_result.txt  .pyright_verbose.txt  .pytest_co.txt  .pytest_full.txt  .pytest_out.txt  .pytest_results.txt  .test-out.txt  .test_result.txt  .venv  AGENTS.md  Dockerfile  ENZYME_REFACTOR_SPEC.md  GEMINI.md  Tonus.md  _chunk1.txt  _chunk2.txt  _chunk3.txt  _chunk4.txt  _chunk5.txt  (+79 more)
.pyright_tmp/: out.json
.tmp/: debug_hkma.py  debug_hkma_v2.py  debug_hkma_v3.py  debug_hkma_v4.py  debug_sfc.py  debug_sfc_v2.py  hkma_body.html  pyr.json  pyr2.json  pyr3.json  pyr_fresh.json  pyr_met.json  pyr_met2.json  pyr_met3.json  pyr_met4.json  pyr_met5.json  pyr_met6.json  pyr_met7.json  pyr_met8.json  pyr_met_cc2.json  pyr_met_cc3.json  pyr_met_now.json  pyr_metabolon.json  pyr_metout.txt  pyr_run.json  pyr_run.txt  pyr_run2.txt  pyr_run3.txt  pyr_run4.txt  pyr_text.txt  pyright.json  pyright_tmp.json  sfc_body.html  test-hkma.json  test-sfc.json
assays/: conftest.py  consulting_audit.md  coverage_audit.md  create_synthetic_fixtures.py  non-deterministic-audit.md  test___init__.py  test___main__.py  test__parallel_search.py  test_add.py  test_agent_sync.py  test_anatomy.py  test_angiogenesis.py  test_architecture_resource.py  test_assay.py  test_assay_actions.py  test_assay_effector.py  test_audit.py  test_auscultation.py  test_auscultation_actions.py  test_auto_update_compound_engineering.py  test_auto_update_compound_engineering.sh.py  test_auto_update_compound_engineering_sh.py  test_autoimmune.py  test_axon_merge_guard.py  test_axon_read_target_preflight.py  test_backfill_marks.py  test_backup_due.py  test_backup_due_sh.py  test_baroreceptor.py  test_base.py  test_boc.py  test_browse.py  test_browser.py  test_browser_effector.py  test_browser_stealth.py  test_bud.py  test_capco_brief.py  test_capco_prep.py  test_card_search.py  test_case_study.py  (+738 more)
cofactors/: custodes.py  gather.py  llm.py  vigilia_journal.py
docker/: zshrc
effectors/: DueAddRecurring.shortcut  ab-drift-check  acta  add-garp-topics.py  agent-sync.sh  akm-heartbeat.py  anam-scan  assay  association.py  auto-update-compound-engineering.sh  autoimmune.py  backfill-marks  backup-due.sh  batch-scrape  browse  browser  bud  burn  capco-brief  capco-prep  card-search  cargo-audit-sweep.py  censor  centrosome  cerno  cg  channel  chat_history.py  checkpoint  chemoreception.py  chemotaxis  chemotaxis-local  chromatin-backup.py  chromatin-backup.sh  chromatin-decay-report.py  ci-push  cibus  cibus.py  circadian-probe.conf  circadian-probe.py  (+270 more)
effectors/mtor/: README.md  pyproject.toml
effectors/mtor/assays/: test_mtor.py  test_mtor_integration.py  test_scan.py  test_task_id.py
effectors/mtor/mtor/: __init__.py  cli.py  client.py  dispatch.py  doctor.py  envelope.py  scan.py  tree.py
effectors/polysome/: CLAUDE.md  README.md  autopoiesis.py  cli.py  dispatch.py  models.py  pyproject.toml  start.sh  translation_graph.py  translocase.py  worker.py  workflow.py
effectors/polysome/assays/: test_autopoiesis.py  test_chaperone.py  test_stall_detector_v2.py  test_stall_detector_v3.py  test_translocase.py
effectors/ribosome-cli/: pyproject.toml
effectors/ribosome-cli/assays/: test_ribosome_cli.py
effectors/ribosome-cli/ribosome_cli/: cli.py
effectors/temporal-golem/: CLAUDE.md  README.md  cli.py  dispatch.py  docker-compose.yml  full_results.txt  golem_graph.py  models.py  pyproject.toml  start.sh  test_out.txt  worker.py  workflow.py
effectors/temporal-golem/tests/: test_workflow_dispatch.py
endocytosis/: config.yaml  sources.yaml
gemmule/: install.sh  tmux.conf
hooks/: memory-budget  no-lint-suppression
lib/: custodes.py
loci/: ab-drift-log.jsonl  ab-help-baseline.txt  ai-news-test-2026-03-28.md  coll_out.txt  com.vivesca.epigenome-pull.plist  crontab  env-mac.op  env.op  golem-queue.bak.md  golem-queue.md  golem-queue.md.pre-dedup  golem-reviews.jsonl  harness-setup.sh  priorities.md  ribosome-config.lock.json  ribosome-runs.jsonl  ribosome-supervised-settings.json  soma.conf  supervisor.conf  translation-queue.md  usus-history.jsonl  usus-log.jsonl  vivesca-events.jsonl  zshenv
membrane/: .zshenv.tpl  claude.json  expression.json  goose-phenotype.md  memory  phenotype.md
metabolon/: __main__.py  checkpoint.py  cytosol.py  dispatch_gate.py  locus.py  membrane.py  operons.py  perfusion.py  pore.py  pulse.py  respiration.py  server.py  symbiont.py  vasomotor.py
nervous-system/: dendrite.py  operon-signal.py  phenotype_rename.py
operons/: bud-workflows.md  colony-log.md  colony-workflows.md
oscillators/: soma-crontab
pytest-of-terry/: pytest-current
pytest-of-terry/pytest-16/test_cli_init_then_add_then_ch0/tmp52o7c80o/myapp/: pyproject.toml
pytest-of-terry/pytest-16/test_cli_init_then_add_then_ch0/tmp52o7c80o/myapp/assays/: test_handshake.py
pytest-of-terry/pytest-16/test_cli_init_then_add_then_ch0/tmp52o7c80o/myapp/src/myapp/: __main__.py
pytest-of-terry/pytest-16/test_cli_init_then_add_then_ch0/tmp52o7c80o/myapp/src/myapp/codons/: analyze.py
pytest-of-terry/pytest-16/test_cli_init_then_add_then_ch0/tmp52o7c80o/myapp/src/myapp/resources/: config.py
pytest-of-terry/pytest-2/test_cli_init_creates_project0/tmpuzhvnhjo/demo/: pyproject.toml
receptors/: .gitignore
regulatory/: capco.md  vault-notes.md
regulon/: capco.md  coding.md  garden.md  rust-projects.md  vault-notes.md
skills/: credentia.md  regulatory-scrape.md  tessera-google.md
symbionts/: glm.json  harnesses.json  kimi.json
synaptic/: axon.py  compaction.py  dendrite.py  gemini_adapter.py  hebbian_nudge.py  interoceptor.py  morphogen.py  operon-signal.py  skill-trigger-gen.py  synapse.py  terminus.py
tmp/: sortase_todo.md
(+6161 files in other folders)
