[project]
name = "metabolon"
version = "0.4.1"
description = "A living system built on cell biology as a design constraint."
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Terry Li"}]

dependencies = [
    "acta",
    "beautifulsoup4>=4.12",
    "oghma",
    "click>=8.0",
    "fastmcp>=3.0.0",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-sqlite>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pypdf>=4.0",
    "pyyaml>=6.0.3",
    "requests>=2.31",
    "trafilatura>=1.9",
    "typer>=0.9",
]

[tool.uv.sources]
acta = { path = "../code/acta", editable = true }
oghma = { path = "../code/oghma", editable = true }

[project.urls]
Homepage = "https://vivesca.org"
Repository = "https://github.com/vivesca/vivesca"
Blog = "https://terryli.hm"

[project.scripts]
vivesca = "metabolon.pore:cli"
interphase-gather = "metabolon.pinocytosis.interphase:main"
ultradian-gather = "metabolon.pinocytosis.ultradian:main"
ecdysis-gather = "metabolon.pinocytosis.ecdysis:main"
photoreception-gather = "metabolon.pinocytosis.photoreception:main"
polarization-gather = "metabolon.pinocytosis.polarization:main"
lysin = "metabolon.lysin.cli:main"
sarcio = "metabolon.organelles.golgi:_cli"
gemmation = "metabolon.organelles.gemmation:_cli"
pondus = "metabolon.organelles.statolith:_cli"
caelum = "metabolon.organelles.baroreceptor:_cli"
melete = "metabolon.organelles.potentiation:_cli"
moneo = "metabolon.organelles.pacemaker:_cli"
keryx = "metabolon.organelles.gap_junction:_cli"
sortase = "metabolon.sortase.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "pyright", "pre-commit", "codespell", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metabolon"]

[tool.pytest.ini_options]
testpaths = ["assays"]
asyncio_mode = "auto"
addopts = "-m 'not slow'"
markers = ["slow: boots full MCP server (skip with default opts)"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "SIM115"]  # E501: line-length enforced by formatter; SIM115: false positive for Popen log handles

[tool.ruff.lint.per-file-ignores]
# E402: lazy/conditional imports — intentional for optional deps or sys.path manipulation
"metabolon/organelles/pacemaker.py" = ["E402"]
"metabolon/organelles/baroreceptor.py" = ["E402", "RUF001"]
"metabolon/organelles/endocytosis_rss/relevance.py" = ["E402"]
"metabolon/organelles/endocytosis_rss/fetcher.py" = ["RUF001"]  # CJK content
"metabolon/organelles/potentiation.py" = ["E402", "RUF001"]
"metabolon/pinocytosis/__init__.py" = ["E402"]
"metabolon/enzymes/integrin.py" = ["E402"]
"metabolon/enzymes/interoception.py" = ["E402"]
"metabolon/enzymes/secretory.py" = ["E402"]
"metabolon/organelles/endocytosis_rss/cli.py" = ["B008"]  # typer.Option() in signatures is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["metabolon"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportCallIssue = "warning"

[tool.codespell]
# Absorbed external content, reference docs, and generated artefacts are excluded.
# Our own code + new docs are still checked.
# skip takes a comma-separated string; TOML arrays are joined with "," by codespell.
skip = [
    ".venv",
    "uv.lock",
    "*.pyc",
    "*.pdf",
    # External tool configs absorbed into the monorepo.
    # Patterns use *path* so fnmatch matches regardless of whether codespell
    # prefixes paths with "./" (standalone run) or not (pre-commit run).
    "*opencode/node_modules*",
    "*opencode/skills*",
    "*opencode/agents*",
    "*opencode/commands*",
    "*opencode/*.json",
    "*opencode/*.bak.*",
    # Claude agent memory and rules (research extractions, quoted docs)
    "*claude/agent-memory*",
    "*claude/rules*",
    "*claude-backup*",
    # Absorbed lustro organelle (may contain quoted external content)
    "*organelles/endocytosis_rss/sources*",
    # Generated / event-log files
    "*loci/vivesca-events.jsonl",
    # Reference docs: plans, specs, brainstorms, solutions (may contain quoted text,
    # non-English content, technical acronyms from external sources)
    "*loci/antisera*",
    "*loci/specs*",
    "*loci/plans*",
    "*loci/brainstorms*",
    # Generated poiesis/pulse outputs (LLM-extracted docs, may contain non-English proper nouns)
    "*loci/poiesis*",
    "*loci/pulse*",
    # Archived receptors (old skill versions)
    "*receptors/.archive*",
    # Test fixtures (binary files, sample data)
    "*assays/fixtures*",
]
# False positives in our own code:
#   rouge       — ROUGE NLP evaluation metric (effectors/add-garp-topics.py comment)
#   nd          — variable name (nd = len(docs)) and time-unit suffix (Nh/Nm/Nd)
#   selectin    — cell adhesion molecule family (receptors/layers/cell.yaml)
#   ore         — in quoted Latin etymology ("the place you extract ore")
#   unparseable — intentional word choice in error messages (effectors/judge)
#   importin    — biological nuclear-import protein; also our CLI tool name
#   sive        — sive.rs (Derek Sivers' domain) in lustro/sources.yaml
#   wit         — "dry wit" in openclaw persona docs
#   thats       — intentional informal-speech literals in synapse.py ("thats all", "thats it")
#   stilus      — Latin stylus (original meaning preserved)
ignore-words-list = "stilus,rouge,nd,selectin,ore,unparseable,importin,sive,wit,thats"

[tool.coverage.run]
source = ["metabolon"]
omit = ["cytoplasm/metabolon/dispatch.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
