[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.6,<0.11" ]

[project]
name = "metabolon"
version = "0.4.1"
description = "A living system built on cell biology as a design constraint."
readme = "readme.md"
license = { text = "MIT" }
authors = [ { name = "Terry Li" } ]

requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "acta",
  "beautifulsoup4>=4.12",
  "click>=8",
  "cryptography>=46.0.6",
  "fastmcp>=3.2",
  "feedparser>=6",
  "google-api-python-client>=2.193",
  "google-auth-oauthlib>=1.3.1",
  "hatchet-sdk>=1.29.3",
  "hypothesis>=6.151.10",
  "jinja2>=3.1",
  "langgraph>=1.1.3",
  "langgraph-checkpoint>=4.0.1",
  "langgraph-checkpoint-sqlite>=3",
  "oghma",
  "playwright>=1.58",
  "pydantic>=2",
  "pygments>=2.20",
  "pypdf>=4",
  "pyyaml>=6.0.3",
  "requests>=2.31",
  "rich>=13",
  "telethon>=1.36",
  "temporalio>=1.24",
  "trafilatura>=1.9",
  "typer>=0.9",
]

urls.Blog = "https://terryli.hm"
urls.Homepage = "https://vivesca.org"
urls.Repository = "https://github.com/vivesca/vivesca"
scripts.caelum = "metabolon.organelles.baroreceptor:_cli"
scripts.ecdysis-gather = "metabolon.pinocytosis.ecdysis:main"
scripts.gemmation = "metabolon.organelles.gemmation:_cli"
scripts.interphase-gather = "metabolon.pinocytosis.interphase:main"
scripts.keryx = "metabolon.organelles.gap_junction:_cli"
scripts.lysin = "metabolon.lysin.cli:main"
scripts.melete = "metabolon.organelles.potentiation:_cli"
scripts.moneo = "metabolon.organelles.pacemaker:_cli"
scripts.photoreception-gather = "metabolon.pinocytosis.photoreception:main"
scripts.polarization-gather = "metabolon.pinocytosis.polarization:main"
scripts.pondus = "metabolon.organelles.statolith:_cli"
scripts.sarcio = "metabolon.organelles.golgi:_cli"
scripts.sortase = "metabolon.sortase.cli:main"
scripts.ultradian-gather = "metabolon.pinocytosis.ultradian:main"
scripts.vivesca = "metabolon.pore:cli"

[dependency-groups]
dev = [
  "codespell",
  "deptry>=0.25.1",
  "pip-audit>=2.10",
  "pre-commit",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-randomly>=4.0.1",
  "ruff",
  "ty>=0.0.28",
]

[tool.ruff]
target-version = "py314"
line-length = 99
src = [ "src" ]
extend-exclude = [ "membrane/receptors/.system" ]

lint.select = [ "B", "E", "F", "I", "RUF", "SIM", "UP" ]
lint.ignore = [
  "E501",
  "SIM115",
  "SIM117",
] # E501: line-length enforced by formatter; SIM115: false positive for Popen log handles; SIM117: multi-with is valid Python 3.14
# E402: from __future__ import annotations pushes imports below module docstring in test files;
# effectors use sys.path.insert before later imports
lint.per-file-ignores."assays/*" = [ "E402" ]
lint.per-file-ignores."assays/test_ribosome_daemon_stats.py" = [ "E741", "F821" ]
lint.per-file-ignores."assays/test_ribosome_dash.py" = [ "E741", "F821" ]
# Tests that exec() effector scripts — injected names invisible to static analysis
lint.per-file-ignores."assays/test_ribosome_review.py" = [ "E741", "F821" ]
lint.per-file-ignores."assays/test_ribosome_top.py" = [ "E741", "F821" ]
lint.per-file-ignores."effectors/*" = [ "E402" ]
lint.per-file-ignores."src/metabolon/enzymes/integrin.py" = [ "E402" ]
lint.per-file-ignores."src/metabolon/enzymes/interoception.py" = [ "E402" ]
lint.per-file-ignores."src/metabolon/enzymes/secretory.py" = [ "E402" ]
lint.per-file-ignores."src/metabolon/organelles/baroreceptor.py" = [ "E402", "RUF001" ]
lint.per-file-ignores."src/metabolon/organelles/endocytosis_rss/cli.py" = [
  "B008",
] # typer.Option() in signatures is idiomatic
lint.per-file-ignores."src/metabolon/organelles/endocytosis_rss/fetcher.py" = [ "RUF001" ] # CJK content
lint.per-file-ignores."src/metabolon/organelles/endocytosis_rss/relevance.py" = [ "E402" ]
# E402: lazy/conditional imports — intentional for optional deps or sys.path manipulation
lint.per-file-ignores."src/metabolon/organelles/pacemaker.py" = [ "E402" ]
lint.per-file-ignores."src/metabolon/organelles/potentiation.py" = [ "E402", "RUF001" ]
lint.per-file-ignores."src/metabolon/pinocytosis/__init__.py" = [ "E402" ]
lint.isort.known-first-party = [ "metabolon" ]

[tool.codespell]
# Absorbed external content, reference docs, and generated artefacts are excluded.
# Our own code + new docs are still checked.
# skip takes a comma-separated string; TOML arrays are joined with "," by codespell.
skip = [
  ".venv",
  "uv.lock",
  "*.pyc",
  "*.pdf",
  # External tool configs absorbed into the monorepo.
  # Patterns use *path* so fnmatch matches regardless of whether codespell
  # prefixes paths with "./" (standalone run) or not (pre-commit run).
  "*opencode/node_modules*",
  "*opencode/skills*",
  "*opencode/agents*",
  "*opencode/commands*",
  "*opencode/*.json",
  "*opencode/*.bak.*",
  # Claude agent memory and rules (research extractions, quoted docs)
  "*claude/agent-memory*",
  "*claude/rules*",
  "*claude-backup*",
  # Absorbed lustro organelle (may contain quoted external content)
  "*organelles/endocytosis_rss/sources*",
  # Generated / event-log files
  "*loci/vivesca-events.jsonl",
  # Reference docs: plans, specs, brainstorms, solutions (may contain quoted text,
  # non-English content, technical acronyms from external sources)
  "*loci/antisera*",
  "*loci/specs*",
  "*loci/plans*",
  "*loci/brainstorms*",
  # Generated poiesis/pulse outputs (LLM-extracted docs, may contain non-English proper nouns)
  "*loci/poiesis*",
  "*loci/pulse*",
  # Archived receptors (old skill versions)
  "*receptors/.archive*",
  # Test fixtures (binary files, sample data)
  "*assays/fixtures*",
]
# False positives in our own code:
#   rouge       — ROUGE NLP evaluation metric (effectors/add-garp-topics.py comment)
#   nd          — variable name (nd = len(docs)) and time-unit suffix (Nh/Nm/Nd)
#   selectin    — cell adhesion molecule family (receptors/layers/cell.yaml)
#   ore         — in quoted Latin etymology ("the place you extract ore")
#   unparseable — intentional word choice in error messages (effectors/censor)
#   importin    — biological nuclear-import protein; also our CLI tool name
#   sive        — sive.rs (Derek Sivers' domain) in lustro/sources.yaml
#   wit         — "dry wit" in openclaw persona docs
#   thats       — intentional informal-speech literals in synapse.py ("thats all", "thats it")
#   stilus      — Latin stylus (original meaning preserved)
ignore-words-list = "stilus,rouge,nd,selectin,ore,unparseable,importin,sive,wit,thats,pevents,sourc,cunt,resolvin,opps,allo,ans,afile,crasher,te,graphis,pilon,unknow,grammers,coo,jus,trama,fpr,pre-emptive"

[tool.deptry]
# cryptography: used by telethon/playwright at runtime, not imported directly
# google-auth-oauthlib: used by circadian_clock at runtime via google.oauth2
# hatchet-sdk: effectors/polysome (not in src/)
# hypothesis: used in tests, not src
# oghma: editable install, used at runtime
# pygments: used by rich at runtime
ignore = [ "DEP002" ]
[tool.deptry.per_rule_ignores]
DEP001 = [ "workflow", "nodriver", "pycookiecheat" ]
DEP003 = [ "mcp", "httpx", "google", "langchain_core" ]

[tool.pytest.ini_options]
testpaths = [ "assays" ]
asyncio_mode = "auto"
tmp_path_retention_policy = "none"
addopts = "-m 'not slow'"
markers = [ "slow: boots full MCP server (skip with default opts)" ]

[tool.coverage.run]
source = [ "src/metabolon" ]
omit = [ "src/metabolon/sortase/*", "src/metabolon/templates/*" ]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 30

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportCallIssue = "warning"

[tool.uv.sources]
acta = { path = "../code/acta", editable = true }
oghma = { path = "../code/oghma", editable = true }

[tool.ty]
# ty v0.0.x: suppress rules that produce false positives on dynamic patterns
# (Click/typer decorators, MCP tools, LangGraph StateGraph, runtime imports).
# Remaining rules (invalid-return-type, missing-argument, deprecated, etc.) are signal.
[tool.ty.rules]
unresolved-attribute = "ignore"
missing-typed-dict-key = "ignore"
call-non-callable = "ignore"
unresolved-import = "ignore"
unresolved-reference = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"
not-subscriptable = "ignore"
invalid-assignment = "ignore"
no-matching-overload = "ignore"
possibly-missing-submodule = "ignore"
unknown-argument = "ignore"
not-iterable = "ignore"
# tests intentionally pass wrong args inside pytest.raises blocks
missing-argument = "ignore"
# tests intentionally pass too many positional args inside pytest.raises
too-many-positional-arguments = "ignore"
# union return types narrowed at runtime (interoception dispatch, test fixtures)
invalid-return-type = "ignore"
# type: ignore comments needed for Pyright (untyped third-party libs)
unused-type-ignore-comment = "ignore"

[tool.ty.environment]
python-version = "3.14"
extra-paths = [ "effectors/polysome" ]
