[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mtor"
version = "0.5.0"
description = "Agent-first coding task dispatcher for Temporal workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
  "temporal",
  "agent",
  "cli",
  "dispatch",
  "ai-coding",
]
dependencies = [
  "cyclopts",
  "porin",
  "temporalio>=1.7",
]

scripts.mtor = "mtor.cli:app"

[project.urls]
Homepage = "https://github.com/terry-li-hm/mtor"
Repository = "https://github.com/terry-li-hm/mtor"
Issues = "https://github.com/user/mtor/issues"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "mtor" ]

[tool.pytest.ini_options]
testpaths = [ "assays" ]
