[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mtor"
version = "0.4.0"
description = "Agent-first translation controller — dispatch, inspect, and manage ribosome workflows via Temporal"
readme = "README.md"
keywords = [
  "agent",
  "cli",
  "ribosome",
  "temporal",
  "translation",
  "workflow",
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cyclopts",
  "porin",
  "temporalio>=1.7",
]

urls.Homepage = "https://github.com/user/mtor"
urls.Issues = "https://github.com/user/mtor/issues"
urls.Repository = "https://github.com/user/mtor"
scripts.mtor = "mtor.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "mtor" ]

[tool.pytest.ini_options]
testpaths = [ "assays" ]

[tool.pyright]
include = [ "mtor" ]
executionEnvironments = [
  { root = "assays", reportMissingImports = "none", reportAttributeAccessIssue = "none" },
]
