[project]
name = "myapp"
version = "0.1.0"
description = "An MCP server built with vivesca."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "mcp>=1.0.0",
    "vivesca>=0.1.0",
]

[project.scripts]
myapp = "myapp.server:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"