[project]
name = "demo"
version = "0.1.0"
description = "Demo MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "mcp>=1.0.0",
    "vivesca>=0.1.0",
]

[project.scripts]
demo = "demo.server:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"